<resources>
    <string name="app_name">HedgeHogTest</string>
    <string name="title_lbl">Title:</string>
    <string name="rating">Rating:</string>
    <string name="release_date">Release Date:</string>
    <string name="sort_by_popular">Sort By Popular</string>
    <string name="sort_by_top_rated">Sort By Top Rated</string>
    <string name="API_KEY">0ce9e623e6c898c6ae335d5be474c624</string>
    <string name="Host">api.themoviedb.org</string>
    <string name="https">https</string>
    <string name="discover">discover</string>
    <string name="movie">movie</string>
    <string name="api_key_t">api_key</string>
    <string name="language">language</string>
    <string name="en_US">en-US</string>
    <string name="False">false</string>
    <string name="page">page</string>
    <string name="results">results</string>
    <string name="poster_path">poster_path</string>
    <string name="ID_TXT">id</string>
    <string name="origional_title">original_title</string>
    <string name="release_date_txt">release_date</string>
    <string name="vote_avg">vote_average</string>
    <string name="overview">overview</string>
    <string name="base_poster_url">https://image.tmdb.org/t/p/w600_and_h900_bestv2</string>
    <string name="top_rated_txt">top_rated</string>
    <string name="popular_txt">popular</string>
    <string name="totalNum">/10</string>
    <string name="VIDEO_ID_TXT">videoId</string>
    <string name="VIDEOS_TXT_Q">videos</string>
    <string name="NAME_TXT">name</string>
    <string name="VIDEO_KEY">key</string>
    <string name="VIDEO_TYPE">type</string>
    <string name="TEASER">Teaser</string>
    <string name="TRAILER">Trailer</string>
    <string name="ADDED_FAV">Added to your Faviroutes</string>
    <string name="Deleted_entry">Deleted from Favirotes</string>
    <string name="title">title</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="delete_favorite">Delete Favorite</string>
    <string name="trailers_d">Trailers</string>
    <string name="reviews_d">Reviews</string>
</resources>
